--- a/options.css
+++ b/options.css
@@ -6,8 +6,12 @@
   width: 150px;
 }
 
+.optionsBody {
+  font-size: 16px;
+}
+
 .urlTextbox {
-  width: 250px;
+  width: 350px;
 }
 
 .titleTextbox {
